--- a/chess4you/build.gradle
+++ b/chess4you/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
 }
-
 group 'chess4you'
 version '1.0-SNAPSHOT'
 
@@ -12,5 +13,7 @@ repositories {
 }
 
 dependencies {
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("com.google.code.gson:gson:2.8.2")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
