add gradle project

--- a/chess4you/build.gradle
+++ b/chess4you/build.gradle
@@ -1,7 +1,14 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
+    }
+}
+
 plugins {
     id 'java'
-    id 'org.springframework.boot'
-    id 'io.spring.dependency-management'
 }
 group 'chess4you'
 version '1.0-SNAPSHOT'
