--- a/chess4you/build.gradle
+++ b/chess4you/build.gradle
@@ -4,6 +4,8 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
+        classpath("org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7")
+
     }
 }
 
@@ -11,11 +13,33 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.sonarqube'
+apply plugin: 'jacoco'
 
 group 'chess4you'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
+jacoco {
+    toolVersion = "0.8.3"
+    reportsDir = file("$buildDir/reports")
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        xml.destination file("C:/git/chess4you_java/chess4you/code_coverage/reports/jacocoXml/jacocoXml")
+        csv.enabled false
+        html.destination file("C:/git/chess4you_java/chess4you/code_coverage/reports/jacocoHtml")
+    }
+}
+
+test {
+    jacoco {
+        destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+        classDumpDir = file("$buildDir/jacoco/classpathdumps")
+    }
+}
 
 repositories {
     mavenCentral()
