--- a/chess4you_java/build.gradle
+++ b/chess4you_java/build.gradle
@@ -3,9 +3,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
-        classpath("org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7")
-
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7"
+        classpath "org.jacoco:org.jacoco.core:0.8.3"
     }
 }
 
@@ -28,7 +28,7 @@ jacoco {
 jacocoTestReport {
     reports {
         xml.enabled true
-        xml.destination file("C:/git/chess4you_java/chess4you_java/code_coverage/reports/jacocoXml/jacocoXml")
+        xml.destination file("C:/git/chess4you_java/chess4you_java/code_coverage/reports/jacocoXml/jacocoXml.xml")
         csv.enabled false
         html.destination file("C:/git/chess4you_java/chess4you_java/code_coverage/reports/jacocoHtml")
     }
@@ -54,7 +54,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.6'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
-
+    testImplementation "org.jacoco:org.jacoco.agent:0.8.3"
+    testImplementation "org.jacoco:org.jacoco.ant:0.8.3"
     //for JUnit
     testCompile  'junit:junit:4.11'
 }
