--- a/chess4you_java/build.gradle
+++ b/chess4you_java/build.gradle
@@ -1,11 +1,15 @@
 buildscript {
     repositories {
         mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7"
         classpath "org.jacoco:org.jacoco.core:0.8.3"
+        classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.21.0"
     }
 }
 
@@ -15,6 +19,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.sonarqube'
 apply plugin: 'jacoco'
+apply plugin: 'com.palantir.docker'
 
 group 'chess4you'
 version '1.0-SNAPSHOT'
@@ -39,6 +44,18 @@ test {
         destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
         classDumpDir = file("$buildDir/jacoco/classpathdumps")
     }
+}
+
+task('unpack', type: Copy) {
+    dependsOn tasks.jar
+    from(zipTree(tasks.jar.outputs.files.singleFile))
+    into("build/dependency")
+}
+
+docker {
+    name "${project.group}/${bootJar.baseName}"
+    copySpec.from(tasks.unpack.outputs).into("dependency")
+    buildArgs(['DEPENDENCY': "dependency"])
 }
 
 repositories {
