add cleanNBuild.bat update Jenkinsfile 1.6

--- a/chess4you_java/Jenkinsfile
+++ b/chess4you_java/Jenkinsfile
@@ -7,8 +7,7 @@ node {
          sh "gradlew clean"
          sh "gradlew build"
       } else {
-         bat("gradlew clean")
-         bat("gradlew build")
+         bat("call /scripts/cleanNBuild")
       }
    }
    stage('RunCodeCoverage') {
