--- a/chess4you_java/build.gradle
+++ b/chess4you_java/build.gradle
@@ -51,6 +51,7 @@ war {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
