--- a/chess4you_java/build.gradle
+++ b/chess4you_java/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     repositories {
         mavenCentral()
+
     }
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.1.4.RELEASE"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7"
         classpath "org.jacoco:org.jacoco.core:0.8.3"
     }
@@ -52,10 +53,11 @@ war {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compile 'org.springframework.boot:spring-boot-starter-hateoas'
+    compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
     compileOnly 'org.projectlombok:lombok:1.18.6'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
